Update favicon link to use external URL

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Desmos | Graphing Calculator</title> 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.desmos.com/assets/img/apps/graphing/favicon.ico">
   <style>
     body, html {
       margin: 0;
